syntax = "proto2";

package com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto;

option java_package = "com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto";
option java_outer_classname = "VariantProto";

import "File.proto";
import "Library.proto";

message Variant {
    optional string name = 1; // required
    optional string display_name = 2; // required
    optional AndroidArtifact main_artifact = 3; // required
    optional AndroidArtifact android_test_artifact = 4;
    optional JavaArtifact unit_test_artifact = 5;
    optional VariantConfig variantConfig = 6; // required
    repeated TestedTargetVariant tested_target_variants = 7;
}

message AndroidArtifact {
    optional BaseArtifact base_artifact = 1; // inheritance emulation -> required
    optional bool signed = 2; // required
    optional string signing_config_name = 3;
    optional string application_id = 4; // required
    optional string source_gen_task_name = 5; // required
    repeated string abi_filters = 6;
    optional InstantRun instant_run = 7; // required
    repeated File additional_runtime_apks = 8;
    optional TestOptions test_options = 9;
    optional string instrumented_test_task_name = 10;
    optional string bundle_task_name = 11;
    optional string apk_from_bundle_task_name = 12;
}

message JavaArtifact {
    optional BaseArtifact base_artifact = 1; // inheritance emulation -> required
    // TODO: consider caching mockable platform jar path
}

message BaseArtifact {
    optional string name = 1; // required
    optional string compile_task_name = 2; // required
    optional string assemble_task_name = 3; // required
    optional Dependencies dependencies = 4; // required
    optional ArtifactSourceProvider merged_source_provider = 5; // required
    repeated string ide_setup_task_name = 6;
}

message InstantRun {
    optional File info_file = 1; // required
    optional bool is_supported_by_artifact = 2; // required
    enum Status {
        STATUS_UNSSPECIFIED = 0;
        SUPPORTED = 1;
        NOT_SUPPORTED_FOR_NON_DEBUG_VARIANT = 2;
        NOT_SUPPORTED_VARIANT_USED_FOR_TESTING = 3;
        NOT_SUPPORTED_FOR_JACK = 4;
        NOT_SUPPORTED_FOR_EXTERNAL_NATIVE_BUILD = 5;
        NOT_SUPPORTED_FOR_EXPERIMENTAL_PLUGIN = 6;
    }
    optional Status support_status = 3; // required
}

message TestOptions {
    enum Execution {
        HOST = 0; // host by default (?)
        ANDROID_TEST_ORCHESTRATOR = 1;
        ANDROIDX_TEST_ORCHESTRATOR = 2;
    }
    optional Execution execution = 1; // required
}

message Dependencies {
    repeated string android_libraries = 1;
    repeated string java_libraries = 2;
    repeated string native_libraries = 3;
    repeated ModuleDependency module_dependencies = 4;
}

message ArtifactSourceProvider {
    optional AndroidSourceSet variant_source_set = 1;
    optional AndroidSourceSet build_type_source_set = 2; // required
    optional AndroidSourceSet multi_flavor_source_set = 3;
    repeated AndroidSourceSet single_flavor_source_sets = 4;
    optional AndroidSourceSet default_source_set = 5; // required
    optional File classes_folder = 6; // required
    repeated File additional_classes_folders = 7;
    optional File java_resources_folder = 8; // required
    repeated File generated_source_folders = 9;
    repeated File generated_resource_folders = 10;
}

message AndroidSourceSet {
    optional string name = 1; // required
    optional File manifest_file = 2; // required
    repeated File java_directories = 3;
    repeated File java_resources_directories = 4;
    repeated File aidl_directories = 5;
    repeated File renderscript_directories = 6;
    repeated File c_directories = 7;
    repeated File cpp_directories = 8;
    repeated File android_resources_directories = 9;
    repeated File assets_directories = 10;
    repeated File jniLibs_directories = 11;
    repeated File shaders_directories = 12;
}

message VariantConfig {
    optional string name = 1; // required
    map<string, ClassField> res_values = 2;
    repeated File proguard_files = 3;
    repeated File consumer_proguard_files = 4;
    map<string, string> manifest_placeholders = 5;
    optional bool debuggable = 6; // required
    optional string application_id = 7;
    optional int32 version_code = 8;
    optional string version_name = 9;
    optional ApiVersion min_sdk_version = 10;
    optional ApiVersion target_sdk_version = 11;
    repeated string resource_configurations = 12;
}

message ClassField {
    optional string type = 1; // required
    optional string name = 2; // required
    optional string value = 3; // required
}

message ApiVersion {
    optional int32 api_level = 1; // required
    optional string codename = 2;
    optional string api_string = 3; // required
}

message TestedTargetVariant {
    optional string target_project_path = 1;
    optional string target_variant = 2;
}
